Fixed badges getting cut off when printing

--- a/src/main/websrc/css/badges.css
+++ b/src/main/websrc/css/badges.css
@@ -1,4 +1,15 @@
+body {
+  overflow-y: visible;
+}
+
 .container {
+  overflow-y: visible;
+  display: block;
+  float: none;
+  page-break-inside: avoid;
+}
+
+.page {
   display: flex;
   flex-flow: row wrap;
   align-content: stretch;
@@ -8,6 +19,7 @@
   font-family: Arial, Helvetica, sans-serif;
   padding: 0;
   margin: 0 auto;
+  overflow: auto;
 }
 
 .badge {
